--- a/may28/challenge/style.css
+++ b/may28/challenge/style.css
@@ -47,3 +47,36 @@ button{
     border: none;
     border-radius: 2px;
 }
+
+
+@media only screen and (max-width: 600px){
+    .flex1{
+        display: block;
+        margin-top: 16px;
+    }
+
+    img{
+        z-index: -1;
+        position: relative;
+    }
+
+    .flex2{
+        text-align: center;
+    }
+
+    button{
+        justify-self: center;
+        margin-top: 0px;
+        margin-bottom: 8px;
+    }
+
+    ul{
+        font-size: 14px;
+        margin-bottom: 0px;
+    }
+
+    h4{
+        margin-top: 0px;
+        margin-bottom: 16px;
+    }
+}
